showcase: fix incorrect import (& small layout issue)

--- a/projects/showcase/src/app/demo/demo-index.component.scss
+++ b/projects/showcase/src/app/demo/demo-index.component.scss
@@ -29,7 +29,6 @@ mat-sidenav-container {
 mat-form-field.search {
   width: 100%;
   margin-bottom: -1.25em;
-  padding: 0px 4px;
 }
 
 a.active {
